--- a/src/app/admin/features/inventory_role/Dialogue/inventorycortonbox/inventorycortonbox.component.html
+++ b/src/app/admin/features/inventory_role/Dialogue/inventorycortonbox/inventorycortonbox.component.html
@@ -94,7 +94,7 @@
                     <label class="form-label">Subscriber Name</label>
                 </div>
                 <div class="col-12 col-md-9 mb-3 file-upload-container">
-                    <input type="text" class="file-input" [(ngModel)]="selectSubscriber"
+                    <input type="text" class="file-input" [(ngModel)]="selectSubscriber" placeholder="Subscriber Name"
                         [disabled]="selectedType !== '2' && selectedType !== '3'" />
 
                 </div>
