--- a/src/app/_core/charts/bar-chart/bar-chart.component.html
+++ b/src/app/_core/charts/bar-chart/bar-chart.component.html
@@ -16,3 +16,9 @@
 
   <!-- <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px'}"></canvasjs-chart> -->
 </div>
+
+<!-- <div id="chartdiv"></div> -->
+
+
+
+
