--- a/src/app/_core/charts/bar-chart/bar-chart.component.scss
+++ b/src/app/_core/charts/bar-chart/bar-chart.component.scss
@@ -1,3 +1,14 @@
 ::ng-deep .canvasjs-chart-credit {
   display: none !important;
 }
+
+
+#chartdiv {
+  width: 100%;
+  height: 435px;
+  font-size: 11px;
+}
+
+::ng-deep .amcharts-chart-div a {
+  display: none !important;
+}
