--- a/src/app/admin/features/Service_center_role/service/service.component.scss
+++ b/src/app/admin/features/Service_center_role/service/service.component.scss
@@ -27,6 +27,22 @@ span {
     display: flex;
 }
 
+::ng-deep.mdc-text-field--outlined .mdc-notched-outline {
+    z-index: 1;
+    height: 5.5vh;
+}
+
+::ng-deep.mat-mdc-text-field-wrapper.mdc-text-field--outlined .mat-mdc-form-field-infix {
+    padding-top: 11px;
+    padding-bottom: 0;
+}
+
+::ng-deep.mat-mdc-form-field-icon-suffix,
+[dir=rtl] .mat-mdc-form-field-icon-prefix {
+    padding: 0 0 0 4px;
+    height: -1px;
+}
+
 @media screen and (max-width:560px) {
 
     .container-fluid {
