--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -25,7 +25,7 @@ a {
 
 .login-wrap {
 	width: 100%;
-	min-height: 700px;
+	min-height: 75vh;
 	position: absolute;
 }
 
@@ -41,7 +41,7 @@ a {
 }
 
 .login-form {
-	min-height: 34vh;
+	min-height: 30vh;
 	position: relative;
 	perspective: 1000px;
 	transform-style: preserve-3d;
@@ -110,7 +110,7 @@ a {
 
 .foot-lnk {
 	text-align: center;
-	margin: 17px 0;
+	margin: -10px 0px;
 
 }
 
